--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "ethers": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.1",
-    "ethers": "^5.0.0"
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
