--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "test": "make test",
         "snapshot": "make snapshot",
         "lint": "make lint"
+    },
+    "dependencies": {
+        "@chainlink/contracts": "^0.4.1"
     }
 }
