--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Hardhat React Dapp",
-  "name": "Hardhat Create React Dapp Sample",
+  "short_name": "Parametric Wine Insurance",
+  "name": "Parametric Wine Insurance",
   "icons": [
     {
       "src": "favicon.ico",
